<resources>
    <string name="app_name">UniversityApp</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-Mail адрес</string>
    <string name="password">Пароль</string>
    <string name="firstTime">Впервые?</string>
    <string name="signIn">Вход</string>
    <string name="welcome">Добро пожаловать</string>
</resources>